@@ -377,9 +377,9 @@ def create_makefile(target)
   end
 
   $DLDFLAGS = '@DLDFLAGS@'
-  if /linux/ =~ RUBY_PLATFORM and $configure_args['--enable-shared'] and "@GNU_LD@" == "yes"
-    $DLDFLAGS << " -Wl,--no-undefined"
-  end
+#  if /linux/ =~ RUBY_PLATFORM and $configure_args['--enable-shared'] and "@GNU_LD@" == "yes"
+#    $DLDFLAGS << " -Wl,--no-undefined"
+#  end
 
   if $configure_args['--enable-shared'] or "@LIBRUBY@" != "@LIBRUBY_A@"
     $libs = "@LIBRUBYARG@ " + $libs
