@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.8"
-#define RUBY_RELEASE_DATE "2002-12-19"
+#define RUBY_RELEASE_DATE "2002-12-20"
 #define RUBY_VERSION_CODE 168
-#define RUBY_RELEASE_CODE 20021219
+#define RUBY_RELEASE_CODE 20021220
